<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_scanner_top_bar_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_action_bar_height"
        android:background="@drawable/top_action_bar_scrim"
        android:paddingStart="@dimen/top_action_bar_padding_horizontal"
        android:paddingEnd="@dimen/top_action_bar_padding_horizontal">

    <ImageView
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:contentDescription="@string/cd_close_button"
            android:padding="@dimen/top_action_button_padding"
            app:srcCompat="@drawable/ic_close_vd_white_24" />

    <ImageView
            android:id="@+id/flash_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/cd_flash_button"
            android:padding="@dimen/top_action_button_padding"
            app:srcCompat="@drawable/camera_flash" />

    <ImageView
            android:id="@+id/buttonQuestionMark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/help"
            android:padding="@dimen/top_action_button_padding"
            app:srcCompat="@drawable/ic_help_outline_white_24dp" />

    <LinearLayout
            android:id="@+id/action_bar_linear_layout_prompt_and_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/flash_button"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_qr_code"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                android:textSize="20sp" />

        <TextView
                android:id="@+id/action_bar_textViewPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="15sp" />

    </LinearLayout>
</RelativeLayout>
