<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="42dp"
            android:src="@drawable/illustration_camera_permission" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/allow_camera_access"
            android:textAlignment="center"
            android:textColor="@color/black_two"
            android:textSize="25sp"
            android:textStyle="bold" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/to_enable_the_scan_feature"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

    <Button
            android:id="@+id/layout_camera_permission_buttonGetPermission"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/lipstick"
            android:text="@string/allow"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

</LinearLayout>